<resources>
    <string name="app_name">NumberTrivia</string>
    <string name="action_settings">Settings</string>
    <string name="trivia">Trivia</string>
    <string name="math">Math</string>
    <string name="date">Date</string>
    <string name="year">Year</string>
    <string name="NoTriviaFound">No trivia found! :(</string>
    <string name="number_random_if_empty">Number (Random if empty)</string>
    <string name="year_random_if_empty">Year (Random if empty)</string>
    <string name="date_random_if_empty">Month/Day (Random if empty)</string>
</resources>
